2014-05-06 Matt:
	* Adding geometry directory structure and ChangeLog